--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header .menu li{
     
 }
 header .menu li:hover{
-    background-color: rgba(56, 156, 156, 0.747);
+    background-color: #399d9dbe;
     border-radius: 4px;
     
 }
@@ -60,7 +60,7 @@ header .menu li:hover{
     width: 1920px;
     height: 1084px;
     background-size: cover;
-    background-color: rgb(19, 19, 48);
+    background-color: #131330;
     
 }
 
@@ -249,7 +249,7 @@ color: #B9E0DF;
     /* margin-right: 100px; */
     font-family: Roboto;
 font-size: 36px;
-font-style: normal;
+font-style: italic;
 font-weight: 400;
 line-height: 50px;
 letter-spacing: 0em;
